Updated components and all are working

--- a/Kirti/Components/retailerdetails/retailerdetails.component.html
+++ b/Kirti/Components/retailerdetails/retailerdetails.component.html
@@ -35,3 +35,17 @@
         
     </table>
 </div>
+
+<!-- <div>
+    <section *ngFor="let retailer of retailers">
+        <h3 >
+            Product Name : {{retailer.productname}}
+        <br>Product Brand : {{retailer.productbrand}}
+        <br> Product Price : &#x20b9;{{ retailer.productprice}}
+        <br>Usermail : {{retailer.useremail}}
+        <br> Order Quantity : {{retailer.orderquantity}}
+        <br>Retailer Revenue : &#x20b9;{{ retailer.productprice*retailer.orderquantity}}
+        </h3>
+        
+    </section>
+</div> -->
