--- a/Kirti/Components/retailerprofile/retailerprofile.component.css
+++ b/Kirti/Components/retailerprofile/retailerprofile.component.css
@@ -1,5 +1,5 @@
 img{
-    background-color:#a7a7a1;
+    /* background-color:#a7a7a1; */
     width:200px;
     height:200px;
     margin:15px auto;
