--- a/Kirti/Components/addproduct/addproduct.component.html
+++ b/Kirti/Components/addproduct/addproduct.component.html
@@ -7,7 +7,7 @@
     <label >Product Name</label><br>
     
     <input type="text" name="pname" id="pname" placeholder="Enter Product Name" formControlName="pname" autofocus><br>
-    <span ><div *ngIf="submitted && f.pname.errors">
+    <span ><div *ngIf="f.pname.touched && f.pname.errors">
         <div *ngIf="f.pname.errors.required">Product Name required</div>
         <div *ngIf="f.pname.errors">Invalid Product Name</div>
     </div></span>
@@ -15,7 +15,7 @@
     <label >Product Price</label><br>
     
     <input type="text" name="price" id="pprice" placeholder="Enter Product Price" formControlName="pprice" ><br>
-    <span ><div *ngIf="submitted && f.pprice.errors">
+    <span ><div *ngIf="f.pprice.errors && f.pprice.errors">
         <div *ngIf="f.pprice.errors.required">Product Price required</div>
         <div *ngIf="f.pprice.errors.pattern">Invalid Product Price</div>
     </div></span>
@@ -23,7 +23,7 @@
     <label >Product Quantity</label><br>
     
     <input type="number" name="pquantity" id="pquantity" placeholder="Enter Product Quantity" formControlName="pquantity"><br>
-    <span ><div *ngIf="submitted && f.pquantity.errors">
+    <span ><div *ngIf="f.pquantity.errors && f.pquantity.errors">
         <div *ngIf="f.pquantity.errors.required">Email required</div>
         <div *ngIf="f.pquantity.errors.pattern">Invalid Email</div>
     </div></span>
@@ -31,7 +31,7 @@
     <label >Product Description</label><br>
     
     <input type="text" name="pdescription" id="pdescription" placeholder="Enter Product Description" formControlName="pdescription"><br>
-    <span ><div *ngIf="submitted && f.pdescription.errors">
+    <span ><div *ngIf="f.pdescription.errors && f.pdescription.errors">
         <div *ngIf="f.pdescription.errors.required">Product Description required</div>
         <div *ngIf="f.pdescription.errors">Invalid Product Description</div>
     </div></span>
@@ -39,14 +39,14 @@
     <label >Product Brand</label><br>
     
     <input type="text" name="pbrand" id="pbrand" placeholder="Enter Product Brand" formControlName="pbrand"><br>
-    <span ><div *ngIf="submitted && f.pbrand.errors">
+    <span ><div *ngIf="f.pbrand.errors && f.pbrand.errors">
         <div *ngIf="f.pbrand.errors.required">Product brand required</div>
         <div *ngIf="f.pbrand.errors">Invalid Product brand</div>
     </div></span>
     
     <label >Upload Product Image</label><br>
     <input type="file" style="border: darkgray;font-size:12px;"    name="fileToUpload" id="fileToUpload" formControlName="fileupload">
-    <span ><div *ngIf="submitted && f.fileupload.errors">
+    <span ><div *ngIf="f.fileupload.errors && f.fileupload.errors">
         <div *ngIf="f.fileupload.errors.required">File required</div>
     </div></span>
 
