--- a/Kirti/Components/products/products.component.css
+++ b/Kirti/Components/products/products.component.css
@@ -9,6 +9,10 @@ table{
     
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
+table {
+    /* width: 100%; */
+    border-collapse: collapse;
+  }
 
 span{
     color: white;
@@ -21,7 +25,22 @@ span{
 }
 td{
     background-color: white;
+    border: 0.2px solid black;
 }
+
+section
+{
+width:400px;
+height:200px;
+margin:0 auto;
+margin-top:15px;
+padding:5px;
+background-color:darkgrey;
+border: 1px solid darkgrey;
+border-radius: 25px;
+box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+
 
 .updtbtn[disabled]{
   border: 1px solid #999999;
