--- a/Kirti/Components/products/products.component.html
+++ b/Kirti/Components/products/products.component.html
@@ -44,7 +44,7 @@
             <!-- <td> {{product.productstatus}}</td> -->
             <td>{{product.categoryname}} </td>
             <td><a [routerLink]="['/updateproduct']"><button class = "updtbtn" [disabled]="product.productstatus!='accepted' " style="text-align:center;background-color:green;color:white;margin-top:10px">Update Product</button></a></td>
-            <td><button class = "updtbtn"  style="text-align:center;background-color:red;color:white;margin-top:10px" (click)="Removeproduct()">Remove Product</button></td>
+            <td><button class = "updtbtn" [disabled]="product.productstatus!='accepted' " style="text-align:center;background-color:red;color:white;margin-top:10px" (click)="Removeproduct(product.productid)">Remove Product</button></td>
         </tr>
         
     </table>
