--- a/Component/retailer-login/retailer-login.component.css
+++ b/Component/retailer-login/retailer-login.component.css
@@ -1,54 +1,48 @@
+
+
+
+
 article
-    {
-    width:85%;
-    height:450px;
-    margin:0 auto;
-    margin-top:15px;
-    padding:5px;
-    background-color:rgb(255,255,255);
-    }
-    form{
-    height:180px;
-    width:25%;
-    margin:0 auto;
-    padding:20px;
-    }
-    
-    
-    input{
+{
+width:600px;
+height:500px;
+margin:0 auto;
+margin-top:15px;
+padding:5px;
+background-color:darkgrey;
+border: 1px solid darkgrey;
+border-radius: 25px;
+box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+form{
+height:100%;
+width:50%;
+margin:0 auto;
+padding:20px;
+}
+
+
+input{
+padding:10px 10px 10px 15px;
+margin:5px 0;
+border:1.5px solid lightgray;
+width:100%;
+border-radius:0.2px;
+font-size:12px;
+}
+.btn1{
     padding:10px 10px 10px 15px;
     margin:5px 0;
-    border:1.5px solid rgb(247, 243, 243);
+    border:1.5px solid lightgray;
     width:100%;
     border-radius:0.2px;
     font-size:12px;
-    }
-    label{
-    font-family:helvetica;
-    color:#3a3636;
-    font-size:15px;
-    }
-    section{
-    background-color:#e2dede;
-    width:250px;
-    height:50px;
-    margin:15px auto;
-    padding:20px 10px 20px 20px;
-    }
-    section input{
-    background-color:rgb(214, 101, 8);
-    color:white;
-    text-align:center;
-    font-family:helvetica;
-    font-size:13px;
-    padding:10px;
-    width:35%;
-    height:80%;
-    }
-    p{
-    font-family:helvetica;
-    font-size:15px;
-    color:rgb(134, 12, 182);
-    float:right;
-    padding-top:5px;
-    }
+}
+label{
+font-family:helvetica;
+color:black;
+}
+
+span{
+    color: red;
+}
